--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,4 +1,24 @@
-body {
-    background-image: url('example_img_girl.jpg');
-    background-repeat: no-repeat;
+/* body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
   }
+
+  main {
+    flex: 1 0 auto;
+  }
+      
+  .nav-content {
+    border: red solid 2px ;
+  } */
+
+#testing {
+    border-color: #0097a7;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 10px;
+    display: block;
+    width: 50%;
+    height: 50%;
+    transition: background-color 2s, transform 2s;
+}
