--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,3 +22,10 @@
     height: 50%;
     transition: background-color 2s, transform 2s;
 }
+
+footer {
+    position: fixed;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
+}
