--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,7 +13,7 @@
   } */
 
 #testing {
-    border-color: #0097a7;
+    border-color: #d66f01;
     border-radius: 20px;
     border-style: solid;
     border-width: 10px;
