--- a/assets/weather.css
+++ b/assets/weather.css
@@ -6,14 +6,51 @@ body {
   margin: 0;
   background-color: rgb(126, 176, 180);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-background-image: url(./images/weathercloudssky.jpg)
+  background-image: url(./images/weathercloudssky.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .card {
-  background-color: aliceblue;
+  background-color: rgb(37, 142, 247);
+  color: azure;
   padding: 2em;
   border-radius: 30px;
-  width: 50%;
+  width: 100%;
   max-width: 420px;
   margin: 1em;
 }
+
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  margin: 2.5em;
+  height: 2.5em;
+  width: 5em;
+  border: none;
+  color: rgb(11, 93, 165);
+  background-color: rgb(195, 231, 247);
+}
+
+button:hover{
+  background-color: aliceblue;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+
+}
+
+input {
+  margin: .5em;
+  height: 4em;
+  width: 30em;
+  border: none;
+  font-size: 120%;
+  color: rgb(0, 6, 10);
+  background-color: rgb(160, 239, 245);
+}
+
