--- a/assets/weather.css
+++ b/assets/weather.css
@@ -24,33 +24,34 @@ body {
 
 .search {
   display: flex;
+  max-width: fit-content;
   align-items: center;
   justify-content: center;
 }
 
 button {
   margin: 2.5em;
-  height: 2.5em;
-  width: 5em;
+  height: 60px;
+  width: 120px;
   border: none;
   color: rgb(11, 93, 165);
   background-color: rgb(195, 231, 247);
+  font-size: 120%;
 }
 
-button:hover{
+button:hover {
   background-color: aliceblue;
   color: rgb(0, 0, 0);
   cursor: pointer;
-
+  transition: 0.3s;
 }
 
 input {
   margin: .5em;
-  height: 4em;
-  width: 30em;
+  height: 60px;
+  max-width: max-content;
   border: none;
   font-size: 120%;
   color: rgb(0, 6, 10);
   background-color: rgb(160, 239, 245);
 }
-
