--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -47,17 +47,20 @@ footer {
 
 /* -------------------STASH.HTML CSS--------------------- */
 #sidebar {
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
+  margin: 25px;
+  padding: 10px;
+  height: 90%;
+
 }
 
   /* Changing display state for new location function */
 
   #new-trip {
     display: none;
+  }
+
+  #pageContent {
+    margin: 25px;
+
+
   }
