--- a/assets/weather.css
+++ b/assets/weather.css
@@ -12,9 +12,13 @@ body {
   background-position: center center;
 }
 
+#weather {
+  visibility: hidden;
+}
+
 .card {
-  background-color: rgb(37, 142, 247);
-  color: azure;
+  background-color: none;
+  color: rgb(213, 248, 248);
   padding: 2em;
   border-radius: 30px;
   width: 100%;
@@ -35,7 +39,7 @@ button {
   width: 120px;
   border: none;
   color: rgb(11, 93, 165);
-  background-color: rgb(195, 231, 247);
+  background-color: rgb(160, 239, 245);
   font-size: 120%;
 }
 
