--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -19,6 +19,8 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
+  margin: 0px;
+  padding: 0px;
 }
 
 #testing {
@@ -46,14 +48,13 @@ footer {
 }
 
 /* -------------------STASH.HTML CSS--------------------- */
+
+
 #sidebar {
+  width: auto;
   margin: 25px;
   padding: 10px;
-  height: 90%;
-
-}
-#notes {
-  height: 90%;
+  position: fixed;
 }
 
 
