--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -74,6 +74,7 @@ footer {
 
   #weatherContainer {
     display: flex;
-    background-size: contain;
+    background-image: url('../images/blueskyclouds.jpg');
+
   }
 
