added 5 day forecast

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -88,11 +88,12 @@ button {
 
   #weatherContainer {
     display: flex;
+    justify-content: space-evenly;
     background-image: url('../images/blueskyclouds.jpg');
-
+    background-image: contain;
   }
 
-=======
+
 #new-trip {
   display: none;
 }
