--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,11 +23,16 @@ body {
   padding: 0px;
 }
 
+#user-sub {
+  background-color: antiquewhite;
+  color: black;
+
+}
 .headStash {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 600%;
   text-align: center;
-  padding-top: 10PX;
+  padding-top: 0PX;
   padding-bottom: 20px;
 }
 
@@ -78,7 +83,7 @@ footer {
 } 
 
 button {
-  color: #0097a7;
+  color: #8a8486;
   padding: 40;
   border: none;
   background: none;
