--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,12 +125,14 @@ button {
 }
 
 .card-bg {
-  background-image: url("https://images.unsplash.com/photo-1526763025764-2a8073a0cd43?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fHJvYWR0cmlwfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=600&q=60");
+  background-image: url('/assets/images/backpack.jpg');
+  /* background-image: url("https://images.unsplash.com/photo-1526763025764-2a8073a0cd43?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fHJvYWR0cmlwfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=600&q=60"); */
   background-color: #cccccc;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: local;
   background-position: center;
   background-size: cover;
+ 
   margin: 0px;
   padding: 0px;
 }
