--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,8 +125,9 @@ button {
 }
 
 .card-bg {
-  background-image: url('./assets/images/backpack.jpg');
-  /* background-image: url("https://images.unsplash.com/photo-1526763025764-2a8073a0cd43?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fHJvYWR0cmlwfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=600&q=60"); */
+  /* background-image:  './asset/images/backpack.jpg'; */
+  /* background-image: url('./assets/images/backpack.jpg'); */
+  background-image: url("https://images.unsplash.com/photo-1485809052957-5113b0ff51af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1335&q=80");
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-attachment: local;
